TL-9808 theme_roots: Corrects language packs layout issues.
Reviewed-on: https://review.totaralms.com/12507
Tested-by: Alastair Munro <alastair.munro@totaralearning.com>

--- a/theme/roots/less/totara/admin.less
+++ b/theme/roots/less/totara/admin.less
@@ -700,3 +700,28 @@ img.iconsmall {
     text-align: center;
     max-width: 600px;
 }
+
+.currentlangs,
+.availablelangs {
+
+    padding-left: 0;
+
+    label {
+        width: 100%;
+    }
+
+    form {
+        margin-bottom: @padding-large-vertical;
+    }
+
+    select {
+        height: @line-height-computed * 15;
+        width: 95%;
+        max-width: none;
+        margin-bottom: @padding-large-vertical;
+    }
+
+    input {
+        clear: left;
+    }
+}
